chore: Fix review findings and add test